Remove Tailwind CSS | Add Bootstrap & Sourcemaps | WIP

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: Vite & Tailwindcss Boilerplate
+Theme Name: Vite & Bootstrap 5 Boilerplate
 Theme URI: 
-Description: Wordpress Theme rapid development with Vite & Tailwindcss
+Description: Wordpress Theme rapid development with Vite & Bootstrap 5
 Author: Bojan
 Author URI: 
 Requires at least: 5.3
@@ -9,3 +9,4 @@ Tested up to: 5.7
 Requires PHP: 7.4
 Version: 0.3.2
 */
+
